--- a/themes/hyde/sass/hyde.scss
+++ b/themes/hyde/sass/hyde.scss
@@ -33,6 +33,7 @@
 
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  background-color: #f3f3f3;//add
 }
 @media (min-width: 48em) {
   html {
