--- a/themes/hyde/templates/index.html
+++ b/themes/hyde/templates/index.html
@@ -51,7 +51,12 @@
         <div class="content container">
             {% block content %}
                 <div class="posts">
-                    {% for page in section.pages | reverse %}
+                    {%- if paginator%}
+                      {%- set page_set = paginator.pages -%}
+                    {% else %}
+                      {%- set page_set = section.pages -%}
+                    {% endif -%}
+                    {% for page in page_set | reverse %}
                       <div class="post">
                         <h1 class="post-title">
                           <a href="{{ page.permalink }}">
@@ -60,8 +65,21 @@
                         </h1>
 
                         <span class="post-date">{{ page.date | date(format="%Y-%m-%d") }}</span>
+                        <div class="post-content">
+                            {{ page.summary | safe }}
+                        </div>
                       </div>
                     {% endfor %}
+                    <div class="pagenation">
+                      <div class="pagenation_buttons">
+                        {%- if paginator.previous %}
+                          <a href="{{ paginator.previous | safe}}">&lt;&lt;previous</a>
+                        {% endif -%}
+                        {%- if paginator.next %}
+                          <a href="{{ paginator.next | safe}}">next&gt;&gt;</a>
+                        {% endif -%}
+                      </div>
+                    </div>
                 </div>
             {% endblock content %}
         </div>
