--- a/themes/hyde/templates/index.html
+++ b/themes/hyde/templates/index.html
@@ -90,7 +90,9 @@
                 </div>
             {% endblock content %}
         </div>
-
+        <footer>
+          <span>©︎ 2021 9+</span>
+        </footer>
     </body>
 
 </html>
