--- a/themes/hyde/templates/index.html
+++ b/themes/hyde/templates/index.html
@@ -51,12 +51,12 @@
         <div class="content container">
             {% block content %}
                 <div class="posts">
-                    {%- if paginator%}
+                    {%- if paginator %}
                       {%- set page_set = paginator.pages -%}
                     {% else %}
                       {%- set page_set = section.pages -%}
                     {% endif -%}
-                    {% for page in page_set | reverse %}
+                    {% for page in page_set %}
                       <div class="post">
                         <h1 class="post-title">
                           <a href="{{ page.permalink }}">
