--- a/themes/hyde/sass/poole.scss
+++ b/themes/hyde/sass/poole.scss
@@ -322,6 +322,10 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 1rem;
   color: #9a9a9a;
 }
+.post-date2 {
+  margin-right: 1em;
+  color: #9a9a9a;
+}
 
 /* Related posts */
 .related {
