--- a/themes/hyde/templates/index.html
+++ b/themes/hyde/templates/index.html
@@ -75,6 +75,11 @@
                         <div class="post-content">
                             {{ page.summary | safe }}
                         </div>
+                        <a href="{{ page.permalink }}">
+                          続きを読む>>
+                        </a>
+                        <br>
+                        ---
                       </div>
                     {% endfor %}
                     <div class="pagenation">
