--- a/themes/hyde/templates/index.html
+++ b/themes/hyde/templates/index.html
@@ -22,6 +22,14 @@
 
       {% block extra_head %}
       {% endblock extra_head %}
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6KER8940KN"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-6KER8940KN');
+      </script>
     </head>
 
     <body class="{{ config.extra.hyde_theme }} {% if config.extra.hyde_reverse %}layout-reverse{% endif %}">
