--- a/themes/hyde/sass/poole.scss
+++ b/themes/hyde/sass/poole.scss
@@ -51,7 +51,7 @@ body {
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 2.1;//1.5;
 }
 @media (min-width: 38em) {
   html {
