--- a/themes/hyde/templates/index.html
+++ b/themes/hyde/templates/index.html
@@ -21,6 +21,10 @@
       {% endif %}
 
       {% block extra_head %}
+      <!--SNS OGP -->
+      <meta name = "twitter：card" content = "summary">
+      <meta name="twitter:site" content="So9t0">
+      <meta property = "og：image" content = "https://pbs.twimg.com/profile_images/1460585369813282819/LQ_ah1gj_400x400.jpg" />
       {% endblock extra_head %}
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-6KER8940KN"></script>
