--- a/themes/hyde/templates/page.html
+++ b/themes/hyde/templates/page.html
@@ -1,5 +1,13 @@
 {% extends "index.html" %}
 
+{% block extra_head %}
+<!--SNS OGP -->
+<meta name = "twitter：card" content = "summary">
+<meta name="twitter:site" content="So9t0">
+<meta property = "og：title" content = {{ page.title }} />
+<meta property = "og：image" content = "https://pbs.twimg.com/profile_images/1460585369813282819/LQ_ah1gj_400x400.jpg" />
+{% endblock extra_head %}
+
 {% block content %}
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
