--- a/themes/hyde/templates/page.html
+++ b/themes/hyde/templates/page.html
@@ -5,6 +5,9 @@
 <meta name = "twitter：card" content = "summary">
 <meta name="twitter:site" content="So9t0">
 <meta property = "og：title" content = {{ page.title }} />
+<meta property = "og：type" content = "article"/>
+<meta property = "og：url" content = "https://simulacre-9to.netlify.app" />
+<meta property = "og：description" content = {{ page.summary }} />
 <meta property = "og：image" content = "https://pbs.twimg.com/profile_images/1460585369813282819/LQ_ah1gj_400x400.jpg" />
 {% endblock extra_head %}
 
