--- a/themes/hyde/templates/page.html
+++ b/themes/hyde/templates/page.html
@@ -7,7 +7,7 @@
 <meta property = "og：url" content = "https://simulacre-9to.netlify.app" />
 <meta property = "og：description" content = {{ page.summary }} />
 <meta property = "og：image" content = "https://pbs.twimg.com/profile_images/1460585369813282819/LQ_ah1gj_400x400.jpg" />
-<meta property = "twitter：card" content = "summary" />
+<meta name = "twitter：card" content = "summary" />
 <meta property = "twitter:site" content="@So9t0" />
 <meta property = "twitter：creator" content = "@So9t0" />
 <meta property = "twitter：image" content = "https://pbs.twimg.com/profile_images/1460585369813282819/LQ_ah1gj_400x400.jpg" />
